--- a/Эвклид/css/style.css
+++ b/Эвклид/css/style.css
@@ -1315,7 +1315,7 @@ body {
     background-color: var(--gray-blue);
     background-image: inherit;
     background-position: center;
-    background-size: cover;
+    background-size: contain;
   }
 
   .card-detail__content {
