--- a/Эвклид/css/style.css
+++ b/Эвклид/css/style.css
@@ -1349,7 +1349,7 @@ body {
   background-color: var(--gray-blue);
   background-image: url(../img/about-bg.jpg);
   background-position: center;
-  background-size: cover;
+  background-size: contain;
 }
 
 .card-detail__content {
