--- a/Эвклид/css/style.css
+++ b/Эвклид/css/style.css
@@ -1977,6 +1977,153 @@ body {
   }
 }
 
+.footer {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  color: var(--gray-border);
+  background-color: var(--footer-bc);
+}
+
+.footer__container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.footer__nav {
+  max-width: 300px;
+  margin-right: 6%;
+}
+
+.footer__logo {
+  display: flex;
+  align-items: flex-start;
+  width: 224px;
+  min-height: 72px;
+  margin-bottom: 20px;
+}
+
+.footer__menu {
+  margin-bottom: 90px;
+  font-weight: var(--semibold);
+}
+
+.footer__menu-link {
+  font-size: 18px;
+  font-weight: var(--semibold);
+  line-height: 36px;
+  outline: none;
+  transition: color var(--short);
+}
+
+/* .footer__menu-link:hover:not(:active) {
+  color: var(--orange);
+} */
+
+.footer__menu-link:focus-visible:not(:hover:not(:active)) {
+  outline: 2px solid var(--orange);
+  outline-offset: 5px;
+}
+
+.footer__menu-link:active {
+  color: var(--dark-orange);
+}
+
+.footer__feedback {
+  width: calc(571 / 1770 * 100%);
+}
+
+.footer__about {
+  width: calc(363 / 1770 * 100%);
+}
+
+.footer__about {
+  padding-top: 87px;
+}
+
+@media (max-width: 1440px) {
+  .footer__container {
+    justify-content: flex-start;
+  }
+
+  .footer__nav {
+    width: calc(251 / 924 * 100%);
+  }
+
+  .footer__feedback {
+    width: calc(541 / 924 * 100%);
+  }
+
+  .footer__about {
+    display: none;
+  }
+}
+
+@media (max-width: 1280px) {
+  .footer__nav {
+    margin-right: auto;
+  }
+}
+
+@media (max-width: 962px) {
+  .footer__container {
+    align-items: flex-start;
+    flex-direction: column-reverse;
+  }
+
+  .footer__logo {
+    margin-bottom: 15px;
+  }
+
+  .footer__nav {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    margin-right: 0;
+  }
+
+  .footer__menu {
+    display: none;
+  }
+
+  .footer__feedback {
+    width: 100%;
+    max-width: 541px;
+    margin-bottom: 50px;
+  }
+}
+
+@media (max-width: 576px) {
+  .footer__container {
+    align-items: center;
+    flex-direction: column-reverse;
+  }
+
+  .footer {
+    padding-top: 33px;
+    padding-bottom: 33px;
+  }
+
+  .footer__logo {
+    width: 131px;
+    min-height: 42px;
+    margin-bottom: 0;
+  }
+
+  .footer__nav {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    margin-right: 30px;
+  }
+}
+
+@media (any-hover: hover) {
+  .footer__menu-link:hover:not(:active) {
+    color: var(--orange);
+  }
+}
+
 .socials {
   display: flex;
   flex-wrap: wrap;
