--- a/Эвклид/css/style.css
+++ b/Эвклид/css/style.css
@@ -121,3 +121,110 @@
     --swiper-pagination-bullet-height: 10px;
   }
 }
+
+/* glob */
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+img,
+svg {
+  max-width: 100%;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+body {
+  min-width: var(--body-min-width);
+  font-family: var(--montserrat), sans-serif;
+  font-size: var(--dafault-fs);
+  line-height: var(--dafault-lh);
+  color: var(--dark);
+  background-color: var(--white);
+}
+
+.container {
+  max-width: var(--container-max-width);
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: var(--container-padding);
+  padding-left: var(--container-padding);
+}
+
+.reset-list {
+  margin: 0;
+  padding-left: 0;
+  list-style: none;
+}
+
+.reset-btn {
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+
+.visually-hidden {
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+}
+
+.section-title {
+  margin-top: 0;
+  margin-bottom: 20px;
+  font-size: 48px;
+  font-weight: var(--regular);
+  line-height: 58.51px;
+}
+
+.text {
+  margin-top: 0;
+  margin-bottom: 50px;
+}
+
+.text:last-child {
+  margin-bottom: 0;
+}
+
+.color-lightgray {
+  color: var(--gray-border);
+}
+
+@media (max-width: 1280px) {
+  .text {
+    margin-bottom: 60px;
+  }
+}
+
+@media (max-width: 962px) {
+  .text {
+    margin-bottom: 54px;
+  }
+}
+
+@media (max-width: 576px) {
+  .section-title {
+    margin-bottom: 20px;
+    font-size: 24px;
+    line-height: 29.26px;
+  }
+
+  .text {
+    margin-bottom: 12px;
+    font-weight: var(--regular);
+  }
+}
