--- a/Эвклид/css/style.css
+++ b/Эвклид/css/style.css
@@ -284,3 +284,103 @@ body {
     opacity: 0;
   }
 }
+
+.hamburger {
+  display: inline-block;
+  overflow: visible;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  background-color: transparent;
+  cursor: pointer;
+  transition-timing-function: linear;
+  transition-duration: .15s;
+  transition-property: opacity, filter;
+}
+
+.hamburger.is-active .hamburger__inner,
+.hamburger.is-active .hamburger__inner::before,
+.hamburger.is-active .hamburger__inner::after {
+  background-color: var(--dark);
+}
+
+.hamburger__box {
+  position: relative;
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.hamburger__inner {
+  top: 50%;
+  display: block;
+  margin-top: -2px;
+}
+
+.hamburger__inner,
+.hamburger__inner::before,
+.hamburger__inner::after {
+  position: absolute;
+  min-width: 30px;
+  height: 3px;
+  background-color: var(--dark);
+  transition-timing-function: ease;
+  transition-duration: .15s;
+  transition-property: transform;
+}
+
+.hamburger__inner::before,
+.hamburger__inner::after {
+  content: "";
+  display: block;
+}
+
+.hamburger__inner::before {
+  top: -10px;
+}
+
+.hamburger__inner::after {
+  bottom: -10px;
+}
+
+.hamburger--emphatic {
+  overflow: hidden;
+}
+
+.hamburger--emphatic .hamburger__inner {
+  transition: background-color .125s .175s ease-in;
+}
+
+.hamburger--emphatic .hamburger__inner::before {
+  left: 0;
+  transition: transform .125s cubic-bezier(.6, .04, .98, .335), top .05s .125s linear, left .125s .175s ease-in;
+}
+
+.hamburger--emphatic .hamburger__inner::after {
+  top: 10px;
+  right: 0;
+  transition: transform .125s cubic-bezier(.6, .04, .98, .335), top .05s .125s linear, right .125s .175s ease-in;
+}
+
+.hamburger--emphatic.is-active .hamburger__inner {
+  background-color: transparent !important;
+  transition-delay: 0s;
+  transition-timing-function: ease-out;
+}
+
+.hamburger--emphatic.is-active .hamburger__inner::before {
+  top: -80px;
+  left: -80px;
+  transition: left .125s ease-out, top .05s .125s linear, transform .125s .175s cubic-bezier(.075, .82, .165, 1);
+  transform: translate3d(80px, 80px, 0) rotate(45deg);
+}
+
+.hamburger--emphatic.is-active .hamburger__inner::after {
+  top: -80px;
+  right: -80px;
+  transition: right .125s ease-out, top .05s .125s linear, transform .125s .175s cubic-bezier(.075, .82, .165, 1);
+  transform: translate3d(-80px, 80px, 0) rotate(-45deg);
+}
