--- a/Эвклид/css/style.css
+++ b/Эвклид/css/style.css
@@ -715,3 +715,230 @@ body {
     border-color: var(--orange);
   }
 }
+
+/* hero */
+
+.hero {
+  padding-top: 21px;
+  padding-bottom: 25px;
+}
+
+.hero__wrapper {
+  position: relative;
+  padding: 99px 80px;
+}
+
+.hero__content {
+  position: relative;
+  z-index: 11;
+  max-width: 840px;
+  color: var(--white);
+  pointer-events: none;
+}
+
+.hero__title {
+  margin-top: 0;
+  margin-bottom: 24px;
+  font-size: 70px;
+  font-weight: var(--extrabold);
+  line-height: 85px;
+
+}
+
+.hero__slider {
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  border-radius: var(--border-radius);
+  background-position: center;
+  background-size: cover;
+}
+
+.hero__slider {
+  background-color: var(--gray-blue);
+}
+
+.hero__slide--one {
+  background-image: url("../img/designdecision1.jpg");
+  border-radius: 32px;
+}
+
+.hero__slide--two {
+  background-image: url("../img/designdecision2.jpg");
+  border-radius: 32px;
+}
+
+.hero__slide--three {
+  background-image: url("../img/designdecision3.jpg");
+  border-radius: 32px;
+}
+
+.hero__slider-pagination.swiper-pagination {
+  bottom: 18px;
+}
+
+.hero__descr {
+  margin-top: 0;
+  margin-bottom: 40px;
+  font-size: 24px;
+  font-weight: var(--bold);
+  line-height: 29px;
+}
+
+.hero__descr:last-of-type {
+  margin-bottom: 90px;
+}
+
+.hero__btn:not(:last-child) {
+  margin-bottom: 40px;
+}
+
+@media (max-width: 1280px) {
+  .hero {
+    padding-top: 16px;
+    padding-bottom: 15px;
+  }
+
+  .hero__wrapper {
+    padding: 160px 77px;
+  }
+
+  .hero__title {
+    margin-bottom: 16px;
+    font-size: 60px;
+    line-height: 73px;
+  }
+
+  .hero__descr {
+    font-size: 20px;
+    line-height: 24px;
+  }
+
+  .hero__descr:last-of-type {
+    margin-bottom: 60px;
+  }
+
+  .hero__slider {
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .hero__slide--one {
+    background-image: url("../img/designdecision@1024.jpg");
+    border-radius: 24px;
+  }
+
+  .hero__slide--two {
+    background-image: url("../img/designdecision2@1024.jpg");
+    border-radius: 24px;
+  }
+
+  .hero__slide--three {
+    background-image: url("../img/designdecision3@1024.jpg");
+    border-radius: 24px;
+  }
+}
+
+@media (max-width: 800px) {
+  .hero {
+    padding-top: 37px;
+    padding-bottom: 10px;
+  }
+
+  .hero__wrapper {
+    padding: 160px 40px;
+  }
+
+  .hero__title {
+    font-size: 50px;
+    line-height: 61px;
+  }
+
+  .hero__descr {
+    font-size: 18px;
+    line-height: 22px;
+  }
+
+  .hero__slider {
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .hero__slide--one {
+    background-image: url("../img/designdecision@768.jpg");
+    border-radius: 24px;
+  }
+
+  .hero__slide--two {
+    background-image: url("../img/designdecision2@768.jpg");
+    border-radius: 24px;
+  }
+
+  .hero__slide--three {
+    background-image: url("../img/designdecision3@768.jpg");
+    border-radius: 24px;
+  }
+}
+
+@media (max-width: 576px) {
+  .hero {
+    padding-top: 27px;
+    padding-bottom: 30px;
+  }
+
+  .hero__wrapper {
+    padding: 60px 22px;
+  }
+
+  .hero__content {
+    text-align: center;
+  }
+
+  .hero__title {
+    margin-bottom: 6px;
+    font-size: 20px;
+    line-height: 24.38px;
+  }
+
+  .hero__descr {
+    font-size: 12px;
+    line-height: 14.63px;
+  }
+
+  .hero__descr:last-of-type {
+    margin-bottom: 35px;
+  }
+
+  .hero__slider {
+    border-radius: 16px;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .hero__slide--one {
+    background-image: url("../img/designdecision@320.jpg");
+    background-size: cover;
+    border-radius: 16px;
+  }
+
+  .hero__slide--two {
+    background-image: url("../img/designdecision2@320.jpg");
+    background-size: cover;
+    border-radius: 16px;
+  }
+
+  .hero__slide--three {
+    background-image: url("../img/designdecision3@320.jpg");
+    background-size: cover;
+    border-radius: 16px;
+  }
+
+  .hero__slider-pagination.swiper-pagination {
+    bottom: 7px;
+  }
+}
+
+
