--- a/Эвклид/css/style.css
+++ b/Эвклид/css/style.css
@@ -1115,3 +1115,102 @@ body {
   }
 }
 
+/* О нас */
+.about {
+  padding-top: 25px;
+  padding-bottom: 50px;
+}
+
+.about__text {
+  max-width: 1235px;
+  font-size: var(--dafault-fs);
+  line-height: 32px;
+}
+
+.about__cards-wrap {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.about__column {
+  display: flex;
+  flex-direction: column;
+  width: calc(870 / 1770 * 100%);
+}
+
+.about__card {
+  flex-grow: 1;
+}
+
+.about__card:not(:last-child) {
+  margin-bottom: 29px;
+}
+
+@media (max-width: 1440px) {
+  .about__column {
+    width: 100%;
+  }
+
+  .about__column:not(:last-child) {
+    margin-bottom: 32px;
+  }
+
+  .about__column--small-cards {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .about__card:not(:last-child) {
+    margin-bottom: 32px;
+  }
+
+  .about__card--small {
+    flex-grow: 0;
+    width: calc(50% - 32px / 2);
+    margin-bottom: 29px;
+  }
+}
+
+@media (max-width: 1280px) {
+  .about {
+    padding-top: 20px;
+    padding-bottom: 40px;
+  }
+
+  .about__column--small-cards {
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  .about__card--small {
+    width: 100%;
+    margin-bottom: 0;
+  }
+}
+
+@media (max-width: 962px) {
+  .about {
+    padding-top: 26px;
+  }
+
+  .about__card:not(:last-child) {
+    margin-bottom: 25px;
+  }
+}
+
+@media (max-width: 576px) {
+  .about {
+    padding-top: 30px;
+    padding-bottom: 25px;
+  }
+
+  .about__text {
+    line-height: 28px;
+  }
+
+  .about__card:not(:last-child) {
+    margin-bottom: 32px;
+  }
+}
+
