--- a/Эвклид/css/style.css
+++ b/Эвклид/css/style.css
@@ -1335,3 +1335,90 @@ body {
     min-width: 162px;
   }
 }
+
+.card {
+  display: flex;
+  max-width: 870px;
+  padding: 64px 116px 64px 60px;
+  border: 1px solid var(--gray-border);
+  border-radius: var(--border-radius);
+  background-size: 0;
+}
+
+.card::before {
+  content: "";
+  align-self: flex-start;
+  flex-shrink: 0;
+  width: calc(190 / (870 - 60 - 116) * 100%);
+  margin-right: 50px;
+  padding-top: calc(165 / (870 - 60 - 116) * 100%);
+  background-image: inherit;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.card__title {
+  margin-top: 0;
+  margin-bottom: 9px;
+  font-size: 23px;
+  line-height: 30px;
+}
+
+@media (max-width: 1440px) {
+  .card {
+    align-items: flex-start;
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 1280px) {
+  .card {
+    padding: 64px 85px 64px 75px;
+  }
+
+  .card::before {
+    width: calc(190 / (924 - 75 - 85) * 100%);
+    padding-top: calc(165 / (924 - 75 - 85) * 100%);
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+}
+
+@media (max-width: 962px) {
+  .card {
+    align-items: center;
+    padding: 35px 42px 37px 40px;
+  }
+
+  .card::before {
+    align-self: center;
+    width: calc(114 / (668 - 40 - 46) * 100%);
+    margin-right: 16px;
+    padding-top: calc(99 / (668 - 40 - 46) * 100%);
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+}
+
+@media (max-width: 576px) {
+  .card {
+    flex-wrap: wrap;
+    padding: 0;
+    border: none;
+  }
+
+  .card::before {
+    width: 64px;
+    margin-bottom: 6px;
+    padding-top: 56px;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+
+  .card__title {
+    margin-bottom: 3px;
+    font-size: 18px;
+    font-weight: var(--medium);
+    line-height: 22px;
+  }
+}
