--- a/Эвклид/css/style.css
+++ b/Эвклид/css/style.css
@@ -1342,7 +1342,8 @@ body {
   padding: 64px 116px 64px 60px;
   border: 1px solid var(--gray-border);
   border-radius: var(--border-radius);
-  background-size: 0;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .card::before {
@@ -1420,5 +1421,39 @@ body {
     font-size: 18px;
     font-weight: var(--medium);
     line-height: 22px;
+  }
+}
+
+.work {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.work__title {
+  margin-bottom: 50px;
+  line-height: 58.51px;
+}
+
+@media (max-width: 1280px) {
+  .work {
+    padding-top: 37px;
+    padding-bottom: 40px;
+  }
+}
+
+@media (max-width: 962px) {
+  .work {
+    padding-top: 40px;
+  }
+}
+
+@media (max-width: 576px) {
+  .work {
+    padding-top: 22px;
+    padding-bottom: 26px;
+  }
+
+  .work__title {
+    margin-bottom: 6px;
   }
 }
