--- a/Эвклид/css/style.css
+++ b/Эвклид/css/style.css
@@ -1693,3 +1693,128 @@ body {
     margin-bottom: 15px;
   }
 }
+
+.accordion__title {
+  margin: 0;
+}
+
+.accordion__item {
+  margin-bottom: -1px;
+  border-bottom: 1px solid var(--gray-border);
+  transition: border-color var(--short);
+}
+
+.accordion__item:first-child {
+  border-top: 1px solid var(--gray-border);
+}
+
+.accordion__item:not(:first-child) {
+  border-top: 1px solid transparent;
+}
+
+.accordion__item:focus-within {
+  border-color: var(--orange);
+}
+
+.accordion__btn {
+  position: relative;
+  display: block;
+  width: 100%;
+  min-height: 110px;
+  padding-top: 30px;
+  padding-right: 90px;
+  padding-bottom: 30px;
+  color: var(--footer-bc);
+  font-size: 24px;
+  font-weight: var(--bold);
+  line-height: var(--dafault-lh);
+  text-align: left;
+  outline: none;
+  transition: color var(--short);
+}
+
+.accordion__btn:focus {
+  color: var(--orange);
+  cursor: pointer;
+}
+
+.accordion__btn::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 0;
+  width: 50px;
+  height: 50px;
+  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 50 50' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cellipse cx='25' cy='25' rx='25' ry='25' fill='%23CACACA'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M25.0571 24.0571L25.0571 9L25.9429 9L25.9429 24.0571L33.8835 24.0571L41 24.0571L41 24.9429L25.9429 24.9429L25.9429 40L25.0571 40L25.0571 24.9429L10 24.9429L10 24.0571L25.0571 24.0571Z' fill='black'/%3E%3C/svg%3E");
+  transition: background-image var(--short), transform var(--medium-trans);
+  transform: translateY(-50%);
+}
+
+.accordion__btn:focus::after {
+  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 50 50' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cellipse cx='25' cy='25' rx='25' ry='25' fill='%23FF9900'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M25.0571 24.0571L25.0571 9L25.9429 9L25.9429 24.0571L33.8835 24.0571L41 24.0571L41 24.9429L25.9429 24.9429L25.9429 40L25.0571 40L25.0571 24.9429L10 24.9429L10 24.0571L25.0571 24.0571Z' fill='white'/%3E%3C/svg%3E");
+}
+
+.accordion__content {
+  overflow: hidden;
+}
+
+.accordion__content-wrap {
+  padding-bottom: 20px;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity .5s ease, visibility .5s ease;
+  transition-delay: .3s;
+}
+
+.is-active .accordion__content-wrap {
+  opacity: 1;
+  visibility: visible;
+}
+
+.is-active .accordion__btn::after {
+  transform: translateY(-50%) rotate(45deg);
+}
+
+@media (max-width: 1280px) {
+  .accordion__btn {
+    padding-right: 150px;
+    font-size: 20px;
+    line-height: 32px;
+  }
+}
+
+@media (max-width: 962px) {
+  .accordion__btn {
+    padding-right: 95px;
+  }
+}
+
+@media (max-width: 576px) {
+  .accordion__btn {
+    min-height: auto;
+    padding-right: 47px;
+    font-size: 14px;
+    font-weight: var(--medium);
+    line-height: 24px;
+  }
+
+  .accordion__btn::after {
+    width: 30px;
+    height: 30px;
+  }
+}
+
+@media (any-hover: hover) {
+  .accordion__item:hover:not(:active) {
+    border-color: var(--orange);
+  }
+
+  .accordion__btn:hover:not(:active) {
+    color: var(--orange);
+    cursor: pointer;
+  }
+
+  .accordion__btn:hover:not(:active)::after {
+    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 50 50' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cellipse cx='25' cy='25' rx='25' ry='25' fill='%23FF9900'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M25.0571 24.0571L25.0571 9L25.9429 9L25.9429 24.0571L33.8835 24.0571L41 24.0571L41 24.9429L25.9429 24.9429L25.9429 40L25.0571 40L25.0571 24.9429L10 24.9429L10 24.0571L25.0571 24.0571Z' fill='white'/%3E%3C/svg%3E");
+  }
+}
